# rustfm-scrobble

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
examples/: example.rs
src/: auth.rs  client.rs  dto.rs  error.rs  lib.rs  models.rs  scrobbler.rs  single_scrobble.json
