[package]
name = "rustfm-scrobble"
version = "0.1.2"
authors = ["David Futcher <bobbo@ubuntu.com>"]
description = "Last.fm Scrobble library for Rust"
repository = "https://github.com/bobbo/rustfm-scrobble"
keywords = ["lastfm", "scrobble"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest = "0.4.0"
rust-crypto = "0.2.36"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
