[package]
name = "rustfm-scrobble"
version = "0.9.2"
authors = ["David Futcher <david@futcher.io>"]
description = "Last.fm Scrobble library for Rust"
repository = "https://github.com/bobbo/rustfm-scrobble"
keywords = ["lastfm", "last-fm", "scrobble", "api"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest = "0.9.15"
rust-crypto = "0.2.36"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.2"
wrapped-vec = "0.2.1"
