[package]
name = "rustfm-scrobble"
version = "1.1.1"
authors = ["David Futcher <david@futcher.io>"]
description = "Last.fm Scrobble crate for Rust"
repository = "https://github.com/bobbo/rustfm-scrobble"
keywords = ["lastfm", "last-fm", "scrobble", "api"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]
edition = "2021"

[dependencies]
ureq = "^1"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wrapped-vec = "0.3"

[dev-dependencies]
mockito = "0.28"
